--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,2 +1,34 @@
-<h1>Records#new</h1>
-<p>Find me in app/views/records/new.html.erb</p>
+<h1>Add a new record!</h1>
+
+<%= form_for [:user, @record] do |f| %>
+
+    <div>
+        <%= f.label :artist %>
+        <%= f.text_field :artist %>
+    </div>
+
+    <div>
+        <%= f.label :album %>
+        <%= f.text_field :album %>
+    </div>
+
+    <div>
+        <%= f.label :year %>
+        <%= f.text_field :year %>
+    </div>
+
+    <div>
+        <%= f.label :image %>
+        <%= f.text_field :image %>
+    </div>
+
+    <div>
+        <%= f.label :own %>
+        <%= f.check_box :own %>
+    </div>
+
+    <%= f.submit "Add new Record" %>
+
+<% end %>
+
+<%= link_to "Back to the list!", user_records_path %>
