--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.video {
+    position:relative;
+    margin: 0;
+    z-index:0;
+}
+
+.form2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position:absolute;
+    top: 13%;
+    left: 25%;
+    z-index:1;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 25%;
+    color: white;
+    padding: 40px 100px;
+}
