--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav">
+<ul class="nav navbar-dark bg-dark">
   <li class="nav-item">
     <%= link_to 'Home', root_path, class: 'nav-link' %>
   </li>
@@ -7,14 +7,14 @@
     <a class="nav-link disabled">Logged In As: <%= current_user.username %> </a>
   </li>
   <li class="nav-item">
+    <%= link_to 'Edit Account', edit_user_path(@user.id), class: 'nav-link' %>
+  </li>
+  <li class="nav-item">
     <%= link_to 'Log Out', logout_path, method: 'delete', class: 'nav-link' %>
   </li>
   <% else %>
   <li class="nav-item">
     <%= link_to 'Sign Up', new_user_path, class: 'nav-link' %>
-  </li>
-  <li class="nav-item">
-    <%= link_to 'Sign In', new_session_path, class: 'nav-link' %>
   </li>
   <% end %>
 </ul>
