--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,2 +1,35 @@
-<h1>Records#edit</h1>
-<p>Find me in app/views/records/edit.html.erb</p>
+
+<h1>Edit this record!</h1>
+
+<%= form_for [@user, @record] do |f| %>
+
+    <div>
+        <%= f.label :artist %>
+        <%= f.text_field :artist %>
+    </div>
+
+    <div>
+        <%= f.label :album %>
+        <%= f.text_field :album %>
+    </div>
+
+    <div>
+        <%= f.label :year %>
+        <%= f.text_field :year %>
+    </div>
+
+    <div>
+        <%= f.label :image %>
+        <%= f.text_field :image %>
+    </div>
+
+    <div>
+        <%= f.label :own %>
+        <%= f.check_box :own %>
+    </div>
+
+    <%= f.submit "Edit Record" %>
+
+<% end %>
+<%= link_to "Delete this record!", { action: :destroy, id: @record.id }, method: :delete, data: { confirm: "Are you sure you want to get rid of this record?"} %>
+<%= link_to "Back to the list!", user_records_path %>
