--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,11 +1,18 @@
+<div class="addback">
 <h1> My Records </h1>
-
-<ul>
-    <% @records.each do |r| %>
-        <li>
-            <strong> <%= r.artist %> </strong>
-        </li>
+<h2>Own</h2>
+    <% @user.records.each do |r| %>
+        <% if r.own === true %>
+            <p><%= r.artist %>  - <%= r.album %> - <%= r.year %> - <img src="<%= r.image %>"> - <%= link_to "edit", edit_user_record_path(@user.id, r.id) %>
+        <% end %>
     <% end %>
-</ul>
+<h2>Want</h2>
+    <% @user.records.each do |r| %>
+        <% if r.own === false %>
+            <p><%= r.artist %>  - <%= r.album %> - <%= r.year %> - <%= r.image %> - <%= link_to "edit", edit_user_record_path(@user.id, r.id) %>
+        <% end %>
+    <% end %>
 
-<%= link_to "Add New Record", new_user_record_path %>
+
+<p><%= link_to "Add New Record", new_user_record_path %></p>
+</div>
