--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<%= video_tag "vinyl.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: "video" %>
+<div class="form2">
+    <h1>Edit Account</h1>
+    <%= form_for @user do |f| %>  
+      <div class="form-group">
+        <%= f.label :username, 'User-name*' %>
+        <%= f.text_field :username, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :email, 'Email*' %>
+        <%= f.text_field :email, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password, 'Password*' %>
+        <%= f.password_field :password, class: 'form-control' %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :password_confirmation, 'Confirm Password*', class: 'control-label' %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
+
+      <%= f.submit 'Edit Account', class: 'btn btn-primary' %>
+    <% end %>
+    <%= link_to "Delete Account", { action: :destroy, id: @user.id }, method: :delete, data: { confirm: "Are you sure you want to delete your account"} %>
+  </div>
