--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6 offset-md-3">
+<%= video_tag "vinyl.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: "video" %>
+<div class="form2">
     <h1>Sign Up</h1>
     <%= form_for @user do |f| %>  
       <div class="form-group">
@@ -18,11 +18,10 @@
       </div>
       
       <div class="form-group">
-        <%= f.label :password_confirmation, 'Confirm Password*', class: 'col-md-4 control-label' %>
+        <%= f.label :password_confirmation, 'Confirm Password*', class: 'control-label' %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
       <%= f.submit 'Create Account', class: 'btn btn-primary' %>
     <% end %>
   </div>
-</div>
