--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -13,6 +13,8 @@
         <% end %>
     <% end %>
 
+    <p><%= @artist.name %></p>
+
 
 <p><%= link_to "Add New Record", new_user_record_path %></p>
 </div>
