--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,14 +1,6 @@
 <h1>Add a new record!</h1>
 <div class="container-fluid">
-<div class="col-6">
-
-<%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
-    <%= label_tag "Serach for a Record:" %>
-    <%= search_field_tag "record" %>
-    <%= submit_tag "Submit" %>
-<% end %>
-</div>
-
+<div class="row">
 <div class="col-6">
 <%= form_for [:user, @record] do |f| %>
 
@@ -41,17 +33,30 @@
 
 <% end %>
 </div>
-</div>
-
+<div class="col-6">
+<%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
+    <%= label_tag "Serach for a Record:" %>
+    <%= search_field_tag "record" %>
+    <%= submit_tag "Submit" %>
+<% end %>
 <% if @search %>
     <% @search.results.each do |r| %>
+        <%= form_for [:user, @record] do |f| %>
+        <div class="search">
         <p><img src="<%= r.thumb %>"></p>
         <p><%= r.title %></p>
-        <p><%= r.year %></p>
-        <p><%= r.artist %></p>
-        
+        <p><%= r.year   %></p>
+        <%= f.label :own %>
+        <%= f.check_box :own %>
+        <%= hidden_field_tag :api_record, r.to_param %>
+        <%= f.submit "Add new Record" %>
+        </div>  
+    <% end %>
     <% end %>
 <% end %>
+</div>
+</div>
+</div>
 
 
 <%= link_to "Back to the list!", user_records_path %>
