--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,16 +1,35 @@
 <div class="addback">
+<div class= "container">
 <h1> My Records </h1>
 <h2>Own</h2>
-    <% @user.records.each do |r| %>
+<div class="row">
+<% @user.records.each do |r| %>
+        <div class="col newrec">
         <% if r.own === true %>
-            <p><%= r.artist %>  - <%= r.album %> - <%= r.year %> - <img src="<%= r.image %>"> - <%= link_to "edit", edit_user_record_path(@user.id, r.id) %>
-        <% end %>
-    <% end %>
+            <% if r.image != "" %> <img class="img" src="<%= r.image %>"> <% end %>
+            <p><%= r.artist %> 
+            <p><%= r.album %></p>
+            <p><%= r.year %></p>
+            <%= link_to "edit", edit_user_record_path(@user.id, r.id), class: 'btn btn-primary'%>
+            <% end %>
+        </div>
+            <% end %>
+    </div>
+
+ 
 <h2>Want</h2>
+<div class="row">
     <% @user.records.each do |r| %>
+        <div class="col newrec">
         <% if r.own === false %>
-            <p><%= r.artist %>  - <%= r.album %> - <%= r.year %> - <img src="<%= r.image %>"> - <%= link_to "edit", edit_user_record_path(@user.id, r.id) %>
+            <% if r.image != "" %> <img class="img" src="<%= r.image %>"> <% end %>
+            <p><%= r.artist %> 
+            <p><%= r.album %></p>
+            <p><%= r.year %></p>
+            <%= link_to "edit", edit_user_record_path(@user.id, r.id),class: 'btn btn-primary' %>
+            <% end %>
+        </div>
         <% end %>
-    <% end %>
-<p><%= link_to "Add New Record", new_user_record_path %></p>
+    </div>    
 </div>
+
