--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,7 +1,6 @@
+<div class="addback2">
+<div class="container-fluid newrec">
 <h1>Add a new record!</h1>
-<div class="container-fluid">
-<div class="row">
-<div class="col-6">
 <%= form_for [:user, @record] do |f| %>
 
     <div>
@@ -29,16 +28,15 @@
         <%= f.check_box :own %>
     </div>
 
-    <%= f.submit "Add new Record" %>
+    <p><%= f.submit "Add new Record", class: 'btn btn-primary'%></p>
 
 <% end %>
-</div>
-<div class="col-6">
 <%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
-    <%= label_tag "Serach for a Record:" %>
+    <p><%= label_tag "Serach for a Record:" %></p>
     <%= search_field_tag "record" %>
-    <%= submit_tag "Submit" %>
+    <%= submit_tag "Submit", class: 'btn btn-primary'%>
 <% end %>
+<div class="row">
 <% if @search %>
     <% @search.results.each do |r| %>
         <%= form_for [:user, @record] do |f| %>
@@ -46,10 +44,8 @@
         <p><img src="<%= r.thumb %>"></p>
         <p><%= r.title %></p>
         <p><%= r.year   %></p>
-        <%= f.label :own %>
-        <%= f.check_box :own %>
         <%= hidden_field_tag :api_record, r.to_param %>
-        <%= f.submit "Add new Record" %>
+        <%= f.submit "Add new Record", class: 'btn btn-primary'%>
         </div>  
     <% end %>
     <% end %>
@@ -57,6 +53,3 @@
 </div>
 </div>
 </div>
-
-
-<%= link_to "Back to the list!", user_records_path %>
