--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,6 @@
 <div class="addback2">
-<div class="container-fluid newrec">
+<div class="container-fluid">
+<div class="newform">
 <h1>Add a new record!</h1>
 <%= form_for [:user, @record] do |f| %>
 
@@ -31,11 +32,13 @@
     <p><%= f.submit "Add new Record", class: 'btn btn-primary'%></p>
 
 <% end %>
+
 <%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
     <p><%= label_tag "Serach for a Record:" %></p>
     <%= search_field_tag "record" %>
     <%= submit_tag "Submit", class: 'btn btn-primary'%>
 <% end %>
+</div>
 <div class="row">
 <% if @search %>
     <% @search.results.each do |r| %>
