--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -11,13 +11,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     position:absolute;
-    top: 33%;
-    left: 33%;
+    top: 100px;
+    left: 30%;
     z-index:1;
     background-color: rgba(0,0,0,0.5);
-    border-radius: 25%;
+    border-radius: 250px;
     color: white;
     padding: 40px;
+    width: 500px;
+    text-align: center;
 }
