--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,11 +1,13 @@
 <ul class="nav navbar-dark bg-dark">
+<li class="nav-item">
+    <%= link_to 'Vinyl Lover', root_path, class: 'nav-link nav-title' %>
+  </li>
 <% if logged_in? %>
-  <li class="nav-item">
-    <%= link_to 'Home', user_records_path(current_user), class: 'nav-link' %>
+<div>
+  <li class="nav-item welcome">
+    <a class="nav-link disabled">Welcome Back <%= current_user.username %> </a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">Logged In As: <%= current_user.username %> </a>
-  </li>
+</div>
   <li class="nav-item">
   <%= link_to 'Add New Record', new_user_record_path(current_user), class: 'nav-link' %>
   </li>
