--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -2,42 +2,55 @@
 <div class="container-fluid">
 <div class="newform">
 <h1>Add a new record!</h1>
-<%= form_for [:user, @record] do |f| %>
-
+    <div class="newrecform">
     <div>
-        <%= f.label :artist %>
-        <%= f.text_field :artist %>
+    <%= form_for [:user, @record] do |f| %>
+
+                <div>
+                    <%= f.label :artist %>
+                    </div>
+                    <div>
+                    <%= f.text_field :artist %>
+                </div>
+
+                <div>
+                    <%= f.label :album %>
+                    </div>
+                    <div>
+                    <%= f.text_field :album %>
+                </div>
+
+                <div>
+                    <%= f.label :year %>
+                    </div>
+                    <div>
+                    <%= f.text_field :year %>
+                </div>
+
+                <div>
+                    <%= f.label :image %>
+                    </div>
+                    <div>
+                    <%= f.text_field :image %>
+                </div>
+
+                <div>
+                    <%= f.label :own %>
+                    <%= f.check_box :own %>
+                </div>
+
+                <p><%= f.submit "Add new Record", class: 'btn btn-primary'%></p>
+
+            <% end %>
+        </div>
+        <div>
+            <%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
+                <p><%= label_tag "Serach for a Record:" %></p>
+                <%= search_field_tag "record" %>
+                <%= submit_tag "Submit", class: 'btn btn-primary'%>
+            <% end %>
+        </div>
     </div>
-
-    <div>
-        <%= f.label :album %>
-        <%= f.text_field :album %>
-    </div>
-
-    <div>
-        <%= f.label :year %>
-        <%= f.text_field :year %>
-    </div>
-
-    <div>
-        <%= f.label :image %>
-        <%= f.text_field :image %>
-    </div>
-
-    <div>
-        <%= f.label :own %>
-        <%= f.check_box :own %>
-    </div>
-
-    <p><%= f.submit "Add new Record", class: 'btn btn-primary'%></p>
-
-<% end %>
-
-<%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
-    <p><%= label_tag "Serach for a Record:" %></p>
-    <%= search_field_tag "record" %>
-    <%= submit_tag "Submit", class: 'btn btn-primary'%>
-<% end %>
 </div>
 <div class="row">
 <% if @search %>
