--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,16 +24,18 @@ body {
  h1 {
      font-size: 3em;
     text-align: center;
+    font-family: 'Monoton', cursive;
+    margin: 50px;
 }
 .newform {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 
 }
-h1 {
-    margin: 50px;
+h3 {
+    font-family: 'Monoton', cursive;
 }
  h2 {
     text-align: center;
@@ -77,6 +79,24 @@ p {
      justify-content: space-between;
      align-items: center;
 }
+.nav-flex {
+    display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+}
+.nav-left {
+    display: flex;
+     flex-direction: row;
+     justify-content: left;
+     align-items: center;
+}
+.nav-right {
+    display: flex;
+     flex-direction: row;
+     justify-content: right;
+     align-items: center;
+}
  .nav-link {
      color: white;
      
@@ -102,6 +122,8 @@ p {
     left: 24%;
     z-index:1;
     color: white;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 10px;
 }
 
 .addback {
@@ -152,4 +174,22 @@ p {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    text-align: center;
+}
+.newrecflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.manform {
+    border: 1px solid white;
+    padding: 25px;
+    border-radius: 20px;
+}
+.searchform {
+    margin-top: 20px;
+    border: 1px solid white;
+    padding:25px;
+    border-radius: 20px;
 }
