--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,10 +1,9 @@
 <div class="addback2">
 <div class="container-fluid">
-<div class="newform">
-<h1>Add a new record!</h1>
+<h1>Add - A - New - Record!</h1>
     <div class="newrecform">
-    <div>
-    <%= form_for [:user, @record] do |f| %>
+        <div class="manform">
+            <%= form_for [:user, @record] do |f| %>
 
                 <div>
                     <%= f.label :artist %>
@@ -43,15 +42,14 @@
 
             <% end %>
         </div>
-        <div>
+        <div class="searchform">
             <%= form_tag(new_user_record_path(current_user), :method => 'get') do %>
-                <p><%= label_tag "Serach for a Record:" %></p>
+                <h3><%= label_tag "Search - For - A - Record:" %></h3>
                 <%= search_field_tag "record" %>
                 <%= submit_tag "Submit", class: 'btn btn-primary'%>
             <% end %>
         </div>
     </div>
-</div>
 <div class="row">
 <% if @search %>
     <% @search.results.each do |r| %>
@@ -71,6 +69,7 @@
     <% end %>
     <% end %>
 <% end %>
+</div>
 </div>
 </div>
 </div>
