changed want to wishlist

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -16,7 +16,7 @@
             <% end %>
 </div>
  
-<h2 class="word">Want</h2>
+<h2 class="word">WishList</h2>
     <div class="list">
     <% @user.records.each do |r| %>
         <% if r.own === false %>
